--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
         "electron-pdf": "^1.3.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
-        "firebase": "^5.5.1",
+        "firebase": "^5.5.2",
         "fs-extra": "^7.0.0",
         "fuzzysort": "^1.1.4",
         "html-webpack-plugin": "^3.2.0",
@@ -176,6 +176,7 @@
         "react-inspector": "^2.3.0",
         "react-modal": "^3.5.1",
         "react-redux": "^5.0.7",
+        "react-redux-firebase": "^2.1.8",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-select": "^2.0.0",
@@ -183,6 +184,7 @@
         "react-with-styles": "^3.2.1",
         "react-with-styles-interface-aphrodite": "^5.0.1",
         "redux": "^4.0.0",
+        "redux-firestore": "^0.5.8",
         "redux-thunk": "^2.3.0",
         "rimraf": "^2.6.2",
         "sass-loader": "^7.1.0",
