--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "license": "MIT",
     "dependencies": {
         "@firebase/app-types": "^0.3.2",
+        "@firebase/firestore": "^0.8.4",
         "@material-ui/core": "^3.1.1",
         "@material-ui/icons": "^3.0.1",
         "aphrodite": "^2.2.3",
@@ -146,7 +147,7 @@
         "electron-pdf": "^1.3.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
-        "firebase": "^5.5.2",
+        "firebase": "^5.5.4",
         "fs-extra": "^7.0.0",
         "fuzzysort": "^1.1.4",
         "html-webpack-plugin": "^3.2.0",
